manifests/longhorn/service.yml
apiVersion: v1
kind: Service
metadata:
  name: longhorn-frontend
spec:
  type: ExternalName
  externalName: longhorn-frontend.longhorn-system.svc.cluster.local
  ports:
    - port: 80
